fixed alignment issue on analysis page

--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@
 }
 
 html, body{
-    height: 100%;
     width: 100%;
     background-color: #F8F9FA;
     /* background-color: #474C55; */
